// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error display working 1`] = `
<div
  className="tc"
>
  <Header />
  <SearchBox />
  <Scroll>
    <ErrorBoundry>
      <h1
        className="tc dark-red"
      >
        ERROR
      </h1>
    </ErrorBoundry>
  </Scroll>
</div>
`;

exports[`isPending working 1`] = `
<div
  className="tc"
>
  <Header />
  <SearchBox />
  <Scroll>
    <ErrorBoundry>
      <h1
        className="tc white f1"
      >
        Loading..
      </h1>
    </ErrorBoundry>
  </Scroll>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  className="tc"
>
  <Header />
  <SearchBox />
  <Scroll>
    <ErrorBoundry>
      <CardList
        pokemons={Array []}
      />
    </ErrorBoundry>
  </Scroll>
</div>
`;
